# gpug

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html
crates/gpug/: Cargo.toml
crates/gpug/examples/: kitchen_sink.rs
crates/gpug/src/: edge.rs  gpug.rs  graph.rs  main.rs  node.rs
crates/gpug/src/generators/: mod.rs  utils.rs  watts_strogatz.rs
src/: lib.rs
