[package]
name = "gpug"
version = "0.1.0"
edition = "2024"

[dependencies]
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["Document", "HtmlCanvasElement", "WebGl2RenderingContext", "WebGlBuffer", "WebGlProgram", "WebGlShader", "Window"] }

[lib]
crate-type = ["cdylib", "rlib"]
