[workspace]
members = ["crates/gpug"]
default-members = ["crates/gpug"]
resolver = "2"

[workspace.dependencies]
gpug = { path = "crates/gpug" }

gpui = { git = "https://github.com/zed-industries/zed" }
# smallvec is included here for convenience, it is used by gpui when creating
# components that can have children. uncomment this line or
# use `cargo add smallvec` to add it to your project
#smallvec = "1.13.2"
